force-app/main/default/objects/UserInfo_Change_Logs__c/UserInfo_Change_Logs__c.object-meta.xml
<CustomObject>
    <label>UserInfo_Change_Logs</label>
    <nameField>
        <label>UserInfo_Change_Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserInfo_Change_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>