force-app/main/default/objects/UserInfo_Change_Logs__c/fields/ChangedById__c.field-meta.xml
<CustomField>
    <fullName>ChangedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChangedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserInfo_Change_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>