force-app/main/default/objects/UserInfo_Change_Logs__c/fields/UserProfile__c.field-meta.xml
<CustomField>
    <fullName>UserProfile__c</fullName>
    <label>UserProfile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>