force-app/main/default/objects/UserInfo_Change_Logs__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <label>UserRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>