force-app/main/default/objects/UserInfo_Change_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ChangedDate__c</columns>
    <columns>CompanyCode__c</columns>
    <columns>Email__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Name__c</columns>
    <columns>UserProfile__c</columns>
    <columns>UserRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>